# gourd

./: .gitignore  AGENTS.md  CODING_REFERENCE.md  Cargo.toml  HIR_PROGRESS.md  HIR_STATUS.md  IMPL_SUMMARY.md  INTEGRATION_WIP.md  Makefile  NEXT.txt  PROGRESS.md  README.md  ROADMAP.md  transpile-experiment-2026-06-04.md
.pi/: settings.json
.zed/: settings.json
examples/: data_filtering.go  text_analysis.go
gourd/: Cargo.toml
gourd-check/: Cargo.toml
gourd-check/src/: lib.rs  main.rs  report.rs  scanner.rs  validator.rs
gourd-check/src/validator/: mod.rs  normalize.rs  temp.rs  types.rs  validate.rs  verify_batch.rs
gourd-check/tests/: integration.rs  validation_summary.md
gourd-codegen/: Cargo.toml
gourd-codegen-core/: Cargo.toml
gourd-codegen-core/src/: lib.rs  validate.rs
gourd-codegen-core/src/transpiler/: expr.rs  free_fn.rs  funcs.rs  mod.rs  parsing.rs  receiver.rs  types.rs
gourd-codegen/src/: debug.rs  lib.rs  tmp_test.rs  transpiler.rs
gourd-codegen/src/scanner/: mod.rs
gourd-codegen/src/transpiler/: ast.rs  base_stmts.rs  control_flow.rs  expr.rs  free_fn.rs  funcs.rs  heuristics.rs  mod.rs  params.rs  parsing.rs  receiver.rs  return_stmts.rs  slice_map.rs  slices.rs  stmt_to_rust.rs  stmts.rs  switch.rs  types.rs
gourd-codegen/src/transpiler/expr/: calls.rs  closures.rs  control_flow.rs  dispatch.rs  literals.rs  operators.rs
gourd-codegen/src/transpiler/free_fn/: basic.rs  closure.rs  interface.rs  mod.rs  select.rs  switch.rs
gourd-codegen/src/transpiler/funcs/: basic.rs  mod.rs  receiver.rs
gourd-codegen/src/transpiler/hir/: ast.rs  codegen.rs  conversion.rs  conversion.rs.patch  conversion.rs.tmp  expression.rs  mod.rs  statement.rs  types.rs
gourd-codegen/src/transpiler/hir/types/: compound.rs  mapping.rs  mod.rs  primitives.rs
gourd-codegen/src/transpiler/legacy/: base_stmts.rs  control_flow.rs  expr_calls.rs  expr_closures.rs  expr_control_flow.rs  expr_dispatch.rs  expr_literals.rs  expr_operators.rs  expr_structs.rs  mod.rs  return_stmts.rs  stmt_to_rust.rs  stmts.rs
gourd-codegen/src/validate/: go.rs  rust.rs  temp.rs
gourd-codegen/tests/: channel_ops.rs  continue_stmt.rs  coverage.rs  embed_tests.rs  field_assignment.rs  for_range_test.rs  go_fn.rs  interface_tests.rs  make_builtin.rs  multi_case_switch.rs  multi_return_test.rs  receiver_tests.rs  shorthand_query.rs  slice_map_debug.rs  struct_literals.rs  switch_extended.rs  switch_minimal.rs  token_test.rs  type_assertion.rs  unimplemented.rs
gourd-embed-tests/: Cargo.toml
gourd-embed-tests/src/: lib.rs
gourd-macro/: Cargo.toml
gourd-macro/src/: lib.rs
gourd-macro/src/transpiler/: expr.rs  mod.rs
gourd-macro/tests/: append_builtin.rs  channel_ops.rs  closure_builtin_test.rs  closure_test.rs  complex_builtin_test.rs  continue_stmt.rs  for_range_test.rs  go_fn.rs  go_variadic.rs  interface_tests.rs  make_builtin.rs  min_max_test.rs  multi_case_switch.rs  multi_return_test.rs  new_builtin.rs  package_functions.rs  panic_builtin.rs  prelude_map_ops.rs  receiver_tests.rs  recover_builtin_test.rs  select_builtin.rs  shorthand_query.rs  std_copy_delete_append.rs  struct_literals.rs  switch_minimal.rs  transpile_go_fn.rs  type_assertion.rs
gourd-scanner/: Cargo.toml
gourd-scanner/src/: lib.rs
gourd/gourd-codegen/: Cargo.toml
gourd/gourd-codegen-core/src/: lib.rs
gourd/gourd-codegen-core/src/transpiler/: parsing.rs  types.rs
gourd/gourd-codegen-core/src/transpiler/expr/: operators.rs
gourd/gourd-codegen/src/: lib.rs
gourd/gourd-codegen/tests/: multi_return_test.rs  transpile_go_fn.rs
gourd/src/: go_gc.rs  go_map.rs  go_scheduler.rs  go_slice.rs  go_string.rs  lib.rs  main.rs  prelude.rs  scanner.rs
gourd/src/prelude/: any.rs  complex.rs  defer_guard.rs  error.rs  fmt_ops.rs  mod.rs  rand.rs  std.rs  sync.rs
gourd/tests/: gc_tests.rs
notes/: GO_BRIDGING.md
rfcs/: rfc-001-grouped-params.md  rfc-002-receiver-functions.md  rfc-003-multi-return-values.md  rfc-004-error-handling.md  rfc-005-gogc.md  rfc-006-dispatch-go-multi-return-values.md
scripts/: coverage-summary.py  publish.sh
(+14 files in other folders)
