[package]
name = "gourd-check"
version = "0.1.0"
edition = "2024"
description = "Standalone Go/Rust source-level validation tool for gourd projects"
license = "MIT"

[[bin]]
name = "gourd-check"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }
tempfile = "3"
toml = "0.8"
walkdir = "2"
