[package]
name = "gourd-codegen"
version = "0.1.1"
edition = "2024"
description = "Core Go to Rust transpilation library"
license = "MIT"

[lib]

[features]
default = ["validate"]
validate = []  # External compiler validation (enabled by default)

[dependencies]
walkdir = "2"
syn = { version = "2", features = ["full", "fold"] }
quote = "1"
proc-macro2 = "1"
