[package]
name = "gourd"
version = "0.1.0"
edition = "2024"

[lib]
name = "gourd"
path = "src/lib.rs"

[[bin]]
name = "gourd"
path = "src/main.rs"

[dependencies]
gourd-codegen = { path = "gourd-codegen" }
gourd-codegen-core = { path = "gourd-codegen-core" }

[dev-dependencies]
gourd-codegen = { path = "gourd-codegen" }
gourd-codegen-core = { path = "gourd-codegen-core" }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
