[package]
name = "gourd"
version = "0.1.1"
edition = "2024"
description = "Go to Rust transpiler runtime + CLI tool"
license = "MIT"
repository = "https://github.com/trim/github/tcr/gourd"
homepage = "https://github.com/trim/github/tcr/gourd"
documentation = "https://docs.rs/gourd"

[lib]
name = "gourd"
path = "src/lib.rs"

[[bin]]
name = "gourd"
path = "src/main.rs"

[dependencies]
gourd-macro = { path = "../gourd-macro" }
gourd-codegen = { path = "../gourd-codegen" }
clap = { version = "4", features = ["derive"] }
prettyplease = "0.2"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full"] }
crossbeam = "0.8"
num-traits = "0.2"
tempfile = "3"
log = "0.4"

[dev-dependencies]
gourd-macro = { path = "../gourd-macro" }
