[package]
name = "gourd-codegen"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
gourd-codegen-core = { path = "../gourd-codegen-core" }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
gourd-codegen-core = { path = "../gourd-codegen-core" }
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
